--- a/EmployeeHandlerSystem/EmployeeHandlerSystem/wwwroot/css/site.css
+++ b/EmployeeHandlerSystem/EmployeeHandlerSystem/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+
 html {
   font-size: 14px;
 }
@@ -19,5 +20,10 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.btn  {
+    position: relative;
+    right: 0px;
 }
 
